# turn-based-combat

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/samples/NaughtsAndCrosses/lib/: NACTypes.h
include/samples/NoughtsAndCrosses/lib/: NACTypes.h
include/samples/RockPaperScissors/lib/: RPSTypes.h
include/tbc/: Action.hpp  Actionable.hpp  Battle.hpp  BattleScheduler.hpp  BattleTypes.hpp  Command.hpp  CommandPayloadSet.hpp  CommandQueue.hpp  CommandResponse.hpp  Comms.hpp  DeferredEffect.hpp  DeferredUserEffect.hpp  Effect.hpp  Event.hpp  EventHandler.hpp  Layout.h  Log.h  Log.hpp  PlayerCommandRequest.hpp  PlayerComms.hpp  Schedule.hpp  Scheduler.hpp  Side.h  Slot.h  Target.h  Target.hpp  Turn.hpp  UserEffect.hpp  util.h
include/tbc/util/comms/: PlayerClientCommsAdapter.hpp  PlayerClientProxy.hpp
include/tbc/util/layout/: GridLayout.hpp  RPGLayout.hpp
include/util/: oneof.hpp  tmp.hpp  util.h
source/: lib.cpp  main.cpp  util.h
source/samples/NaughtsAndCrosses/: cli_app.cpp
source/samples/NaughtsAndCrosses/lib/: NACTypes.cpp
source/samples/NoughtsAndCrosses/: CMakeLists.txt  cli_app.cpp
source/samples/NoughtsAndCrosses/lib/: NACTypes.cpp
source/samples/RockPaperScissors/: CMakeLists.txt  cli_app.cpp
source/samples/RockPaperScissors/lib/: RPSTypes.cpp
source/tbc/: Battle.cpp  CMakeLists.txt  Layout.cpp  Log.cpp  Side.cpp  Slot.cpp  Target.cpp  lib.cpp
test/: CMakeLists.txt
test/source/: ningalu-turn-based-combat-2_test.cpp
test/source/samples/NoughtsAndCrosses/: NACIntegrationTest.cpp  NACTypesTest.cpp
test/source/samples/RockPaperScissors/: RPSIntegrationTest.cpp
test/source/tbc/: EventHandlerTest.cpp  LayoutTest.cpp  LogTest.cpp  RPGLayoutTest.cpp  TargetTest.cpp
test/source/util/: UtilTests.cpp
